Switch to metric store