@@ -1215,6 +1215,9 @@ Full telegraf.conf example
 Confluent Interceptor Monitoring
 ================================
 
+Implement Confluent Interceptor integration to Splunk
+-----------------------------------------------------
+
 **Confluent Interceptor allows monitoring latency from producers and consumers in any kind of ways and is a very performing and rich way to monitor your Kafka components for Confluent customers:**
 
 - https://docs.confluent.io/current/control-center/installation/clients.html
@@ -1224,7 +1227,12 @@ Confluent Interceptor Monitoring
 - We use a Docker container to run the command center console consumer from the interceptor topic, by default "_confluent-monitoring"
 - You cannot consume this topic directly in Splunk without the command center console consumer as it contains binary data that would not be readbale
 - Once started, the Docker container consumes the topic and outputs the data in the stdout
-- Finally, we use the Docker logging driver to forward this data to a Splunk HTTP Event Collector endpoint
+- The Docker container uses the Splunk Docker logging driver to forward this data to a Splunk HTTP Event Collector endpoint
+- Finally, we use the Splunk logs to metrics capabilities to transform the metric events into metrics stored in the Splunk metric store
+
+*For more information about Splunk logs to metrics capabilities, consult:*
+
+- https://docs.splunk.com/Documentation/Splunk/latest/Metrics/L2MOverview
 
 .. image:: img/draw.io/confluent_interceptor_diagram.png
    :alt: confluent_interceptor_diagram.png
@@ -1241,7 +1249,11 @@ Confluent Interceptor Monitoring
 
 **Once you decided where to run the Docker container, which could be the same machine hosting the command center for example, you will:**
 
-*Create an HEC token dedicated for it, or allow an existing token to forward to a new event index, example:*
+*Create a new metric (not a event index!) index to store the Confluent interceptor metrics, by default the application excepts:*
+
+- **confluent_interceptor_metrics**
+
+*Create an HEC token dedicated for it, or allow an existing token to forward to the metric index, example:*
 
 ::
 
@@ -1255,7 +1267,7 @@ Confluent Interceptor Monitoring
 
 ::
 
-  [confluent:interceptor]
+  [confluent_interceptor]
   SHOULD_LINEMERGE=false
   LINE_BREAKER=([\r\n]+)
   CHARSET=UTF-8
@@ -1270,6 +1282,11 @@ Confluent Interceptor Monitoring
   # Only keep the metrics, send any other events from the container to the null queue
   TRANSFORMS-confluent-interceptor = confluent_interceptor_setnull
 
+  # Logs to metrics
+  TRANSFORMS-fieldvalue=confluent_interceptor_fields_extraction
+  TRANSFORMS-metricslog=confluent_interceptor_eval_pipeline
+  METRIC-SCHEMA-TRANSFORMS=metric-schema:extract_metrics
+
 *Define the following transforms in a transforms.conf configuration file in Splunk:*
 
 ::
@@ -1278,6 +1295,21 @@ Confluent Interceptor Monitoring
   REGEX = ^confluentinc/cp-enterprise-control-center
   DEST_KEY = queue
   FORMAT = nullQueue
+
+  [confluent_interceptor_fields_extraction]
+  FORMAT = $1::$2
+  REGEX = \"([a-zA-Z0-9_\.]+)\":\"?([a-zA-Z0-9_\.-]+)
+  REPEAT_MATCH = true
+  SOURCE_KEY = _raw
+  WRITE_META = true
+
+  [confluent_interceptor_eval_pipeline]
+  INGEST_EVAL = metric_name="confluent_interceptor"
+
+  [metric-schema:extract_metrics]
+  METRIC-SCHEMA-MEASURES-confluent_interceptor=_ALLNUMS_
+  METRIC-SCHEMA-MEASURES-confluent_interceptor=count,aggregateBytes,aggregateCrc,totalLatency,minLatency,maxLatency,arrivalTime
+  METRIC-SCHEMA-BLACKLIST-DIMS-confluent_interceptor=session,sequence,window,minWindow,maxWindow
 
 *Define a new Docker container, you can use docker-compose for an easier deployment and maintenance:*
 
@@ -1289,6 +1321,8 @@ Confluent Interceptor Monitoring
   cd /opt/confluent-interceptor
 
 - In this directory, copy the command center properties file that you use for command center, at the minimal you need to define the kafka broker and zookeeper connection string:
+
+*Notes: we use the properties file to bootrap the command center console consumer, not an instance of the command center, so you can certainly be even more strict and remove any useless parameter here.*
 
 *control-center.properties*
 
@@ -1320,16 +1354,16 @@ Confluent Interceptor Monitoring
   # confluent.license=Xyz
 
   # A comma separated list of Connect host names
-  confluent.controlcenter.connect.cluster=http://localhost:8083
+  # confluent.controlcenter.connect.cluster=http://localhost:8083
 
   # KSQL cluster URL
-  confluent.controlcenter.ksql.ksqlDB.url=http://localhost:8088
+  # confluent.controlcenter.ksql.ksqlDB.url=http://localhost:8088
 
   # Schema Registry cluster URL
-  confluent.controlcenter.schema.registry.url=http://localhost:8081
+  # confluent.controlcenter.schema.registry.url=http://localhost:8081
 
   # Kafka REST endpoint URL
-  confluent.controlcenter.streams.cprest.url=http://localhost:8090
+  # confluent.controlcenter.streams.cprest.url=http://localhost:8090
 
   # Settings to enable email alerts
   #confluent.controlcenter.mail.enabled=true
@@ -1421,7 +1455,7 @@ Confluent Interceptor Monitoring
   # Amount of heap to use for internal caches. Increase for better thoughput
   confluent.controlcenter.streams.cache.max.bytes.buffering=100000000
 
-*Finally, create a new docker-compose.yml file as follows, edit the Splunk index, the HEC target token to match your deployment:*
+*Finally, create a new docker-compose.yml file as follows, edit the Splunk index, the HEC target and the HEC token to match your deployment:*
 
 ::
 
@@ -1436,8 +1470,8 @@ Confluent Interceptor Monitoring
         splunk-url: "https://mysplunk.domain.com:8088"
         splunk-insecureskipverify: "true"
         splunk-verify-connection: "false"
-        splunk-index: "confluent_interceptor_logs"
-        splunk-sourcetype: "confluent:interceptor"
+        splunk-index: "confluent_interceptor_metrics"
+        splunk-sourcetype: "confluent_interceptor"
         splunk-format: "raw"
         tag: "{{.ImageName}}/{{.Name}}/{{.ID}}"
         env: "env,label,host"
@@ -1456,11 +1490,114 @@ Confluent Interceptor Monitoring
 
   docker-compose up -d
 
+*Shall the system be restarted, or the container be failing, Docker will automatically restart a new container.*
+
 *After the image has been downloaded, the container automatically starts and metrics start to be forwarded to Splunk:*
 
 .. image:: img/confluent_interceptor1.png
    :alt: confluent_interceptor1.png
    :align: center
+
+*You can use the following search to verify that metrics are being ingested:*
+
+::
+
+  | mcatalog values(metric_name) values(_dims) where index=* metric_name=confluent_interceptor.* by index
+
+*You can as well use the msearch command:*
+
+::
+
+  | msearch index=* filter="metric_name="confluent_interceptor.*""
+
+.. image:: img/confluent_interceptor2.png
+   :alt: confluent_interceptor2.png
+   :align: center
+
+Troubleshoot Confluent Interceptor consumer
+-------------------------------------------
+
+**If you do not receive the metrics in Splunk, the first verification you should do would to be comment out the logging driver settings in the docker-compose.yml, then manually start the container to verify its output:**
+
+::
+
+  *docker-compose.yml*
+
+    confluent-interceptor:
+      image: confluentinc/cp-enterprise-control-center
+      restart: always
+      hostname: confluent-interceptor
+      #logging:
+      #  driver: splunk
+      #  options:
+      #    splunk-token: "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxx"
+      #    splunk-url: "https://mysplunk.domain.com:8088"
+      #    splunk-insecureskipverify: "true"
+      #    splunk-verify-connection: "false"
+      #    splunk-index: "confluent_interceptor_metrics"
+      #    splunk-sourcetype: "confluent_interceptor"
+      #    splunk-format: "raw"
+      #    tag: "{{.ImageName}}/{{.Name}}/{{.ID}}"
+      #    env: "env,label,host"
+      mem_limit: 600m
+      volumes:
+        - control-center.properties:/etc/confluent-control-center/control-center.properties
+      environment:
+        env: "docker_env"
+        label: "testing"
+        host: "confluent-control-center-metrics"
+      command: "/usr/bin/control-center-console-consumer /etc/confluent-control-center/control-center.properties --topic _confluent-monitoring"
+
+*Then run the container:*
+
+::
+
+  docker-compose stop confluent-interceptor
+  docker-compose rm -f confluent-interceptor
+  docker-compose up confluent-interceptor
+
+*The container will output to stdout, any failure to start the console consumer due to a properties issues would appear clearly:*
+
+*Press Ctrl+C to stop the container*
+
+::
+
+  Creating template_docker_splunk_localhost_confluent-interceptor_1 ... done
+  Attaching to template_docker_splunk_localhost_confluent-interceptor_1
+  confluent-interceptor_1       | OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
+  confluent-interceptor_1       | SLF4J: Class path contains multiple SLF4J bindings.
+  confluent-interceptor_1       | SLF4J: Found binding in [jar:file:/usr/share/java/acl/acl-6.0.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
+  confluent-interceptor_1       | SLF4J: Found binding in [jar:file:/usr/share/java/confluent-control-center/slf4j-log4j12-1.7.30.jar!/org/slf4j/impl/StaticLoggerBinder.class]
+  confluent-interceptor_1       | SLF4J: See http://www.slf4j.org/codes.html#multiple_bindings for an explanation.
+  confluent-interceptor_1       | SLF4J: Actual binding is of type [org.slf4j.impl.Log4jLoggerFactory]
+  confluent-interceptor_1       | WARNING: An illegal reflective access operation has occurred
+  confluent-interceptor_1       | WARNING: Illegal reflective access by com.google.inject.internal.cglib.core.$ReflectUtils$1 (file:/usr/share/java/acl/acl-6.0.0.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
+  confluent-interceptor_1       | WARNING: Please consider reporting this to the maintainers of com.google.inject.internal.cglib.core.$ReflectUtils$1
+  confluent-interceptor_1       | WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+  confluent-interceptor_1       | WARNING: All illegal access operations will be denied in a future release
+  confluent-interceptor_1       | _confluent-monitoring	0	2020-10-18T14:05:57.771Z	null	{"clientType":"CONSUMER","clientId":"connector-consumer-sink-splunk-demo2-0","group":"connect-sink-splunk-demo2","session":"f0538df4-a9bd-458b-94f6-5d21c94f812d","sequence":"4","window":"0","timestamp":"1603029957771","topic":"kafka_demo","partition":0,"count":"0","aggregateBytes":"0","aggregateCrc":0,"totalLatency":"0","minLatency":"0","maxLatency":"0","samplePeriod":"15000","type":"HEARTBEAT","shutdown":false,"minWindow":"-1","maxWindow":"-1","monitoringTopicPartition":0,"clusterId":"nBWbrPOaRbyE-2Wp0viUwA","clusterName":"","arrivalTime":"0"}
+  confluent-interceptor_1       | _confluent-monitoring	0	2020-10-18T14:06:00.033Z	null	{"clientType":"CONSUMER","clientId":"connector-consumer-sink-splunk-demo1-0","group":"connect-sink-splunk-demo1","session":"d18293d8-7f25-4b6c-bbfc-07a08efab9af","sequence":"7","window":"0","timestamp":"1603029960033","topic":"kafka_demo","partition":0,"count":"0","aggregateBytes":"0","aggregateCrc":0,"totalLatency":"0","minLatency":"0","maxLatency":"0","samplePeriod":"15000","type":"HEARTBEAT","shutdown":false,"minWindow":"-1","maxWindow":"-1","monitoringTopicPartition":0,"clusterId":"nBWbrPOaRbyE-2Wp0viUwA","clusterName":"","arrivalTime":"0"}
+  confluent-interceptor_1       | _confluent-monitoring	0	2020-10-18T14:06:04.652Z	null	{"clientType":"CONSUMER","clientId":"connector-consumer-sink-splunk-demo3-0","group":"connect-sink-splunk-demo3","session":"f0c0222c-a466-4b60-8497-7cb1d0ebfafc","sequence":"22","window":"0","timestamp":"1603029964652","topic":"kafka_demo_headers","partition":0,"count":"0","aggregateBytes":"0","aggregateCrc":0,"totalLatency":"0","minLatency":"0","maxLatency":"0","samplePeriod":"15000","type":"HEARTBEAT","shutdown":false,"minWindow":"-1","maxWindow":"-1","monitoringTopicPartition":0,"clusterId":"nBWbrPOaRbyE-2Wp0viUwA","clusterName":"","arrivalTime":"0"}
+  ^CGracefully stopping... (press Ctrl+C again to force)
+  Stopping template_docker_splunk_localhost_confluent-interceptor_1 ... done
+
+*In the output, raw metrics are:*
+
+::
+
+  | _confluent-monitoring	0	2020-10-18T14:05:57.771Z	null	{"clientType":"CONSUMER","clientId":"connector-consumer-sink-splunk-demo2-0","group":"connect-sink-splunk-demo2","session":"f0538df4-a9bd-458b-94f6-5d21c94f812d","sequence":"4","window":"0","timestamp":"1603029957771","topic":"kafka_demo","partition":0,"count":"0","aggregateBytes":"0","aggregateCrc":0,"totalLatency":"0","minLatency":"0","maxLatency":"0","samplePeriod":"15000","type":"HEARTBEAT","shutdown":false,"minWindow":"-1","maxWindow":"-1","monitoringTopicPartition":0,"clusterId":"nBWbrPOaRbyE-2Wp0viUwA","clusterName":"","arrivalTime":"0"}  
+
+If you can see metrics here, then the command center console consumer is able to bootstrap, access Kafka and Zookeeper, and there are activity in the topic.
+
+Note that if you have no consumers or producers with the Confluent interceptors enabled, there will be no metrics generated here.
+
+**If these steps are fine but you do not receive metrics in Splunk, there might a connectivity issue or misconfiguration on between the Docker container and Splunk, you can force the Docker logging driver to verify the connectivty when starting up:**
+
+::
+
+  splunk-verify-connection: "true"
+
+If the connectivty is not working, Docker will refuse to start the container.
 
 Burrow Lag Consumers
 ====================
